--- a/página-login03/style.css
+++ b/página-login03/style.css
@@ -10,23 +10,22 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background: linear-gradient(to bottom, gray, black);
 }
 
 .title {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   color: white;
   font-weight: bolder;
-  font-size: 2.5em;
+  font-size: 2.3em;
 }
 .header {
   height: 25vh;
   display: flex;
-  background-color: rgb(139, 0, 86);
   align-items: center;
-  justify-content: center;
   justify-content: space-between;
   padding: 10px;
+
   flex-wrap: wrap;
 }
 .button {
@@ -34,17 +33,37 @@
 }
 .nav {
   padding: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
   margin: 3px;
   text-decoration: none;
   border-radius: 5px;
-  border: 1px solid white;
+  border: 1.5px solid white;
   background-color: rgb(119, 124, 163);
   color: white;
-}
-.logo-header {
-  width: 90px;
+  font-weight: normal;
+  font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
 }
 
-.logo-footer {
-  width: 90px;
+.nav:hover {
+  color: darkmagenta;
+  background-color: white;
+  transition: 0.3s;
+}
+.logo-header {
+  width: 80px;
+}
+
+.footer {
+  height: 15vh;
+  justify-content: space-between;
+  display: flex;
+  padding: 10px;
+  background-color: black;
+}
+
+.a-footer {
+  text-decoration: none;
 }
