--- a/página-login03/style.css
+++ b/página-login03/style.css
@@ -7,10 +7,10 @@
 }
 
 .container {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background: linear-gradient(to bottom, gray, black);
+  min-height: 92vh;
 }
 
 .title {
@@ -20,7 +20,6 @@
   font-size: 2.3em;
 }
 .header {
-  height: 25vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -57,13 +56,17 @@
 }
 
 .footer {
-  height: 15vh;
-  justify-content: space-between;
+  height: 8vh;
+  justify-content: center;
   display: flex;
   padding: 10px;
   background-color: black;
+  padding: 8px;
 }
 
-.a-footer {
+.a {
   text-decoration: none;
+  color: white;
+  font-size: 1.2em;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
