--- a/página-login03/style.css
+++ b/página-login03/style.css
@@ -34,7 +34,7 @@
   padding: 3px;
   padding-left: 5px;
   padding-right: 5px;
-  margin: 3px;
+  margin-top: 13px;
   text-decoration: none;
   border-radius: 5px;
   border: 1.5px solid white;
@@ -51,6 +51,21 @@
   background-color: white;
   transition: 0.3s;
 }
+
+.form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60vw;
+  min-height: 40vh;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.308);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.692);
+  border-radius: 10px;
+}
+
 .logo-header {
   width: 80px;
 }
