--- a/página-login04/style.css
+++ b/página-login04/style.css
@@ -47,3 +47,36 @@ body {
   flex-direction: column;
   padding: 10px 0;
 }
+
+.card-content-area input {
+  margin-top: 10px;
+  padding: 0 5px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #e1e1e1;
+  outline: none;
+  color: #fff;
+}
+
+.card-footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-footer .submit {
+  width: 100%;
+  height: 40px;
+  background-color: #a13854;
+  border: none;
+  color: #e1e1e1;
+  margin: 10px 0;
+  cursor: pointer;
+}
+
+.card-footer a {
+  text-align: center;
+  font-size: 12px;
+  opacity: 0.8;
+  color: #fff;
+  text-decoration: none;
+}
