--- a/página-login03/style.css
+++ b/página-login03/style.css
@@ -1,97 +1,86 @@
 @charset "UTF-8";
 
-* {
-  margin: 0;
+body {
   padding: 0;
-  box-sizing: border-box;
+  margin: 0;
+  background: linear-gradient(to top, rgb(221, 20, 20), rgb(34, 109, 170));
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(to bottom, gray, black);
-  min-height: 100vh;
-}
-
-.title {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: white;
-  font-weight: bolder;
-  font-size: 2.1em;
-}
-.header {
+#login {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px;
-
-  flex-wrap: wrap;
-}
-.button {
-  text-decoration: none;
-}
-.nav {
-  padding: 3px;
-  padding-left: 5px;
-  padding-right: 5px;
-  margin-top: 13px;
-  text-decoration: none;
-  border-radius: 5px;
-  border: 1.5px solid white;
-  background-color: rgb(119, 124, 163);
-  color: white;
-  font-weight: normal;
-  font-size: 1em;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-}
-
-.nav:hover {
-  color: darkmagenta;
-  background-color: white;
-  transition: 0.3s;
-}
-.form{
-  display: grid;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  position: absolute;
-  border: 2px solid white;
-  border-radius: 15px;
-  height: 250px;
-  padding: 15px;
-  width: 390px;
-  position: relative;
-  
-}
-label{
-  color: white;
-}
-input{
-  border-radius: 7px;
-  padding: 4px;
-  margin: 5px;
-}
-
-
-.logo-header {
-  width: 80px;
-}
-
-/*
-.footer {
-  height: 8vh;
   justify-content: center;
-  display: flex;
-  padding: 10px;
-  background-color: black;
-  padding: 8px;
+  height: 100vh;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-.a {
+.card {
+  padding: 40px;
+  background-color: rgba(19, 19, 19, 0.3);
+  border-radius: 3px;
+  width: 280px;
+}
+
+.card-header {
+  padding-bottom: 50px;
+  opacity: 0.8;
+  color: #fff;
+}
+.card-header::after {
+  content: "";
+  width: 70px;
+  height: 1px;
+  background-color: #fff;
+  display: block;
+  margin-top: -17px;
+  margin-left: -5px;
+}
+
+.card-content label {
+  color: #fff;
+  font-size: 14px;
+  opacity: 0.8;
+}
+
+.card-content-area {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
+}
+
+.card-content-area input {
+  margin-top: 10px;
+  padding: 0 5px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #e1e1e1;
+  outline: none;
+  color: #fff;
+}
+
+.card-footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-footer .submit {
+  width: 100%;
+  height: 40px;
+  background-color: white;
+  color: rgb(105, 3, 24);
+  font-weight: bold;
+  opacity: 0.8;
+  border: none;
+  margin: 10px 0;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.card-footer a {
+  text-align: center;
+  font-size: 12px;
+  opacity: 0.8;
+  color: #fff;
   text-decoration: none;
-  color: white;
-  font-size: 1.2em;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
