--- a/página-login02/style.css
+++ b/página-login02/style.css
@@ -1,244 +1,304 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900");
+/* Please ❤ this if you like it! */
+
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext");
+
+:root {
+  --white: #ffffff;
+  --light: #f0eff3;
+  --black: #000000;
+  --dark-blue: #1f2029;
+  --dark-light: #353746;
+  --red: #da2c4d;
+  --yellow: #f8ab37;
+  --grey: #ecedf3;
+}
+
+/* #Primary
+================================================== */
 
 body {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 1.7;
-  color: #c4c3ca;
-  background-color: #1f2029;
+  width: 100%;
+  background: var(--dark-blue);
   overflow-x: hidden;
-}
-a {
-  cursor: pointer;
-  transition: all 200ms linear;
-}
-a:hover {
-  text-decoration: none;
-}
-.link {
-  color: #c4c3ca;
-}
-.link:hover {
-  color: #ffeba7;
+  font-family: "Poppins", sans-serif;
+  font-size: 17px;
+  line-height: 30px;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
 }
 p {
+  font-family: "Poppins", sans-serif;
+  font-size: 17px;
+  line-height: 30px;
+  color: var(--white);
+  letter-spacing: 1px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.7;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
 }
-h4 {
-  font-weight: 600;
+::selection {
+  color: var(--white);
+  background-color: var(--black);
 }
-h6 span {
-  padding: 0 20px;
-  text-transform: uppercase;
-  font-weight: 700;
+::-moz-selection {
+  color: var(--white);
+  background-color: var(--black);
+}
+mark {
+  color: var(--white);
+  background-color: var(--black);
 }
 .section {
   position: relative;
   width: 100%;
   display: block;
+  text-align: center;
+  margin: 0 auto;
 }
-.full-height {
-  min-height: 100vh;
+.over-hide {
+  overflow: hidden;
 }
+.z-bigger {
+  z-index: 100 !important;
+}
+
+.background-color {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-blue);
+  z-index: 1;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+.checkbox:checked ~ .background-color {
+  background-color: var(--white);
+}
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked) {
+[type="checkbox"]:not(:checked),
+[type="radio"]:checked,
+[type="radio"]:not(:checked) {
   position: absolute;
   left: -9999px;
+  width: 0;
+  height: 0;
+  visibility: hidden;
 }
 .checkbox:checked + label,
 .checkbox:not(:checked) + label {
   position: relative;
-  display: block;
-  text-align: center;
-  width: 60px;
-  height: 16px;
-  border-radius: 8px;
+  width: 70px;
+  display: inline-block;
   padding: 0;
-  margin: 10px auto;
-  cursor: pointer;
-  background-color: #ffeba7;
+  margin: 0 auto;
+  text-align: center;
+  margin: 17px 0;
+  margin-top: 100px;
+  height: 6px;
+  border-radius: 4px;
+  background-image: linear-gradient(298deg, var(--red), var(--yellow));
+  z-index: 100 !important;
 }
 .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before {
   position: absolute;
-  display: block;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  color: #ffeba7;
-  background-color: #102770;
   font-family: "unicons";
-  content: "\eb4f";
-  z-index: 20;
-  top: -10px;
-  left: -10px;
-  line-height: 36px;
+  cursor: pointer;
+  top: -17px;
+  z-index: 2;
+  font-size: 20px;
+  line-height: 40px;
   text-align: center;
-  font-size: 24px;
-  transition: all 0.5s ease;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+.checkbox:not(:checked) + label:before {
+  content: "\eac1";
+  left: 0;
+  color: var(--grey);
+  background-color: var(--dark-light);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(26, 53, 71, 0.07);
 }
 .checkbox:checked + label:before {
-  transform: translateX(44px) rotate(-270deg);
+  content: "\eb8f";
+  left: 30px;
+  color: var(--yellow);
+  background-color: var(--dark-blue);
+  box-shadow: 0 4px 4px rgba(26, 53, 71, 0.25), 0 0 0 1px rgba(26, 53, 71, 0.07);
 }
 
-.card-3d-wrap {
-  position: relative;
-  width: 440px;
-  max-width: 100%;
-  height: 400px;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  perspective: 800px;
-  margin-top: 60px;
-}
-.card-3d-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  transition: all 600ms ease-out;
-}
-.card-front,
-.card-back {
-  width: 100%;
-  height: 100%;
-  background-color: #2a2b38;
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg");
-  background-position: bottom center;
-  background-repeat: no-repeat;
-  background-size: 300%;
-  position: absolute;
-  border-radius: 6px;
-  left: 0;
-  top: 0;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-.card-back {
-  transform: rotateY(180deg);
-}
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
-  transform: rotateY(180deg);
-}
-.center-wrap {
-  position: absolute;
-  width: 100%;
-  padding: 0 35px;
-  top: 50%;
-  left: 0;
-  transform: translate3d(0, -50%, 35px) perspective(100px);
-  z-index: 20;
-  display: block;
+.checkbox:checked ~ .section .container .row .col-12 p {
+  color: var(--dark-blue);
 }
 
-.form-group {
+.checkbox-tools:checked + label,
+.checkbox-tools:not(:checked) + label {
   position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-.form-style {
-  padding: 13px 20px;
-  padding-left: 55px;
-  height: 48px;
-  width: 100%;
-  font-weight: 500;
-  border-radius: 4px;
+  display: inline-block;
+  padding: 20px;
+  width: 110px;
   font-size: 14px;
-  line-height: 22px;
-  letter-spacing: 0.5px;
-  outline: none;
-  color: #c4c3ca;
-  background-color: #1f2029;
-  border: none;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
-}
-.form-style:focus,
-.form-style:active {
-  border: none;
-  outline: none;
-  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
-}
-.input-icon {
-  position: absolute;
-  top: 0;
-  left: 18px;
-  height: 48px;
-  font-size: 24px;
-  line-height: 48px;
-  text-align: left;
-  color: #ffeba7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-
-.form-group input:-ms-input-placeholder {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input::-moz-placeholder {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:-moz-placeholder {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input::-webkit-input-placeholder {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus:-ms-input-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus::-moz-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus:-moz-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.form-group input:focus::-webkit-input-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-
-.btn {
-  border-radius: 4px;
-  height: 44px;
-  font-size: 13px;
-  font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  padding: 0 30px;
+  line-height: 20px;
   letter-spacing: 1px;
+  margin: 0 auto;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  text-align: center;
+  border-radius: 4px;
+  overflow: hidden;
+  cursor: pointer;
+  text-transform: uppercase;
+  color: var(--white);
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+.checkbox-tools:not(:checked) + label {
+  background-color: var(--dark-light);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+.checkbox-tools:checked + label {
+  background-color: transparent;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkbox-tools:not(:checked) + label:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkbox-tools:checked + label::before,
+.checkbox-tools:not(:checked) + label::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background-image: linear-gradient(298deg, var(--red), var(--yellow));
+  z-index: -1;
+}
+.checkbox-tools:checked + label .uil,
+.checkbox-tools:not(:checked) + label .uil {
+  font-size: 24px;
+  line-height: 24px;
+  display: block;
+  padding-bottom: 10px;
+}
+
+.checkbox:checked
+  ~ .section
+  .container
+  .row
+  .col-12
+  .checkbox-tools:not(:checked)
+  + label {
+  background-color: var(--light);
+  color: var(--dark-blue);
+  box-shadow: 0 1x 4px 0 rgba(0, 0, 0, 0.05);
+}
+
+.checkbox-budget:checked + label,
+.checkbox-budget:not(:checked) + label {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 260px;
+  font-size: 52px;
+  line-height: 52px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  text-align: center;
+  border-radius: 4px;
+  overflow: hidden;
+  cursor: pointer;
+  text-transform: uppercase;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+  -webkit-text-stroke: 1px var(--white);
+  text-stroke: 1px var(--white);
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  color: transparent;
+}
+.checkbox-budget:not(:checked) + label {
+  background-color: var(--dark-light);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
+.checkbox-budget:checked + label {
+  background-color: transparent;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkbox-budget:not(:checked) + label:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkbox-budget:checked + label::before,
+.checkbox-budget:not(:checked) + label::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background-image: linear-gradient(138deg, var(--red), var(--yellow));
+  z-index: -1;
+}
+.checkbox-budget:checked + label span,
+.checkbox-budget:not(:checked) + label span {
+  position: relative;
+  display: block;
+}
+.checkbox-budget:checked + label span::before,
+.checkbox-budget:not(:checked) + label span::before {
+  position: absolute;
+  content: attr(data-hover);
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  -webkit-text-stroke: transparent;
+  text-stroke: transparent;
+  -webkit-text-fill-color: var(--white);
+  text-fill-color: var(--white);
+  color: var(--white);
+  -webkit-transition: max-height 0.3s;
+  -moz-transition: max-height 0.3s;
+  transition: max-height 0.3s;
+}
+.checkbox-budget:not(:checked) + label span::before {
+  max-height: 0;
+}
+.checkbox-budget:checked + label span::before {
+  max-height: 100%;
+}
+
+.checkbox:checked
+  ~ .section
+  .container
+  .row
+  .col-xl-10
+  .checkbox-budget:not(:checked)
+  + label {
+  background-color: var(--light);
+  -webkit-text-stroke: 1px var(--dark-blue);
+  text-stroke: 1px var(--dark-blue);
+  box-shadow: 0 1x 4px 0 rgba(0, 0, 0, 0.05);
+}
+
+.checkbox-booking:checked + label,
+.checkbox-booking:not(:checked) + label {
+  position: relative;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -252,33 +312,149 @@ h6 span {
   justify-content: center;
   -ms-flex-pack: center;
   text-align: center;
-  border: none;
-  background-color: #ffeba7;
-  color: #102770;
-  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
+  padding: 0;
+  padding: 6px 25px;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-bottom: 16px;
+  text-align: center;
+  border-radius: 4px;
+  cursor: pointer;
+  color: var(--white);
+  text-transform: uppercase;
+  background-color: var(--dark-light);
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
 }
-.btn:active,
-.btn:focus {
-  background-color: #102770;
-  color: #ffeba7;
-  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
+.checkbox-booking:not(:checked) + label::before {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
-.btn:hover {
-  background-color: #102770;
-  color: #ffeba7;
-  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
+.checkbox-booking:checked + label::before {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkbox-booking:not(:checked) + label:hover::before {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkbox-booking:checked + label::before,
+.checkbox-booking:not(:checked) + label::before {
+  position: absolute;
+  content: "";
+  top: -2px;
+  left: -2px;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  border-radius: 4px;
+  z-index: -2;
+  background-image: linear-gradient(138deg, var(--red), var(--yellow));
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+.checkbox-booking:not(:checked) + label::before {
+  top: -1px;
+  left: -1px;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+}
+.checkbox-booking:checked + label::after,
+.checkbox-booking:not(:checked) + label::after {
+  position: absolute;
+  content: "";
+  top: -2px;
+  left: -2px;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  border-radius: 4px;
+  z-index: -2;
+  background-color: var(--dark-light);
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+.checkbox-booking:checked + label::after {
+  opacity: 0;
+}
+.checkbox-booking:checked + label .uil,
+.checkbox-booking:not(:checked) + label .uil {
+  font-size: 20px;
+}
+.checkbox-booking:checked + label .text,
+.checkbox-booking:not(:checked) + label .text {
+  position: relative;
+  display: inline-block;
+  -webkit-transition: opacity 300ms linear;
+  transition: opacity 300ms linear;
+}
+.checkbox-booking:checked + label .text {
+  opacity: 0.6;
+}
+.checkbox-booking:checked + label .text::after,
+.checkbox-booking:not(:checked) + label .text::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  left: 0;
+  top: 50%;
+  margin-top: -1px;
+  height: 2px;
+  background-image: linear-gradient(138deg, var(--red), var(--yellow));
+  z-index: 1;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+}
+.checkbox-booking:not(:checked) + label .text::after {
+  width: 0;
+}
+.checkbox-booking:checked + label .text::after {
+  width: 100%;
 }
 
-.logo {
-  position: absolute;
+.checkbox:checked
+  ~ .section
+  .container
+  .row
+  .col-12
+  .checkbox-booking:not(:checked)
+  + label,
+.checkbox:checked
+  ~ .section
+  .container
+  .row
+  .col-12
+  .checkbox-booking:checked
+  + label {
+  background-color: var(--light);
+  color: var(--dark-blue);
+}
+.checkbox:checked
+  ~ .section
+  .container
+  .row
+  .col-12
+  .checkbox-booking:checked
+  + label::after,
+.checkbox:checked
+  ~ .section
+  .container
+  .row
+  .col-12
+  .checkbox-booking:not(:checked)
+  + label::after {
+  background-color: var(--light);
+}
+
+.link-to-page {
+  position: fixed;
   top: 30px;
   right: 30px;
-  display: block;
-  z-index: 100;
-  transition: all 250ms linear;
+  z-index: 20000;
+  cursor: pointer;
+  width: 50px;
 }
-.logo img {
-  height: 26px;
-  width: auto;
+.link-to-page img {
+  width: 100%;
+  height: auto;
   display: block;
 }
